[package]
name = "datetimeutils"
version = "0.1.3"
authors = ["Kartikaya Gupta <kats@bliss.staktrace.com>"]
edition = "2018"
license = "0BSD"

description = "A zero-dependency crate with some date/time/calendar utilities"
homepage = "https://github.com/staktrace/datetimeutils/blob/master/README.md"
repository = "https://github.com/staktrace/datetimeutils"
readme = "README.md"
keywords = ["date", "time", "calendar"]
categories = ["date-and-time"]
exclude = [".gitignore", ".github/**"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
